feat(EEL_task_3) added gc HATEOAS , validation moved to service